PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 7.8.0 Milestone 1
8 January 2018

pts-core: Add meson to external dependencies
pts-core: Other external dependency updates
pts-core: Various minor improvements when running on Docker/containerized
pts-core: Phoroscript interpreter improvements for Windows
pts-core: Allow PTS_WEBSOCKET_PORT environment variable to be used to override WebSocket port when launching Phoromatic Server
phodevi: Add some missing handling around /dev/vd* disks
phodevi: Add BIOS version reporting property

Phoronix Test Suite 7.6.0-Alvdal
7 December 2017

pts-core: Just minor changes

Phoronix Test Suite 7.6.0 Milestone 4
3 December 2017

pts-core: Gentoo external dependency handling updates
pts-core: Better external dependency handling when running on EC2 instances
phodevi: Add new gpu.memory-usage sensor initially supported on NVIDIA

Phoronix Test Suite 7.6.0 Milestone 3
21 November 2017

pts-core: Provide some basic graph size/count reporting on refresh-graphs sub-command
pts-core: make script shebang more portable
pts-core: Various styling updates
pts-core: More demanding debug-self-test
pts-core: Update Fedora's Python packages
pts_Graph: Turn line graphs to horizontal box plots if too much data to graph in space
phodevi: physical CPU core detection count on macOS
phodevi: GPU power consumption sensor support via nvidia-smi
phodevi: NVMe drive temperature reporting on Linux
phodevi: Better memory model detection on Linux

Phoronix Test Suite 7.6.0 Milestone 2
2 November 2017

pts-core: Add LEDE external dependency handling support
pts-core: Drop ports-based external dependency handling for FreeBSD and instead encourage pkg
pts-core: Network MAC address detection on OpenBSD
phoronix-test-suite: Check for php-cli as binary option
phodevi: Motherboard detection support on BSD using smbios.planar.product
phodevi: hw.cpu_topology_core_ids support for physical core count on BSD
phodevi: Allow BSD GPU detection via pciconf data